hologram step 3